# InventaireModuleWMS

./: .coveragerc  .cursorrules  .dockerignore  .env copy  .env.prod  .gitignore  .sonarignore  ANALYSE_APIS_PAGINATION_DATATABLE.md  API_COUNTING_DETAIL_BATCH_DOCUMENTATION.md  API_JOB_CLOSE_DOCUMENTATION.md  API_JWT_LOGIN_DOCUMENTATION.md  API_MOBILE_COUNTING_DETAIL_DOCUMENTATION.md  API_MOBILE_FORMATS.md  API_PDF_JOBS_DOCUMENTATION.md  API_SUMMARY.md  API_SYNC_JOBS_FILTER.md  CI-CD_IMPLEMENTATION.md  COMMENT_TESTER.md  CORRECTION_ENV_SSL.md  COUNTING_DETAIL_API_SUMMARY.md  DEPLOYMENT_QUICK_START.md  DEV_LOCAL_FRONTEND_SETUP.md  DONNEES_INVENTORY_REMPLIES.md  Dockerfile  Dockerfile.prod  ESTIMATION_PERFORMANCE_100_LIGNES.md  EXEMPLE_ENDPOINT_LIGNE_46_47.md  FINAL_STATUS.md  FRONTEND_BACKEND_SETUP.md  GUIDE_OPTIMISATION_PERFORMANCE.md  GUIDE_POSTMAN_TEST.md  GUIDE_TEST_500_LIGNES.md  GUIDE_TEST_API.md  IMPORT_FIX_SUMMARY.md  INDEXES_OPTIMISATION.md  JOB_CREATION_IMAGE_STOCK_MODIFICATION.md  JOB_READY_IMAGE_STOCK_MODIFICATION.md  JOB_REMOVE_EMPLACEMENTS_IMPROVEMENTS.md  Jenkinsfile  Jenkinsfile.backup  (+195 more)
apps/core/datatables/: MANIFEST.in  README.md  __init__.py  base.py  datasource.py  engines.py  example.py  exporters.py  filters.py  mixins.py  models.py  operators.py  optimizations.py  pyproject.toml  request_handler.py  response.py  setup.py
apps/core/datatables/tests/: __init__.py  test_compatibility.py  test_regression.py
config/: urls.py
data/: .gitignore  .gitkeep  famille.xlsx  locations.xlsx  products.xlsx
docs/: ALL_APIS.md  API_IMPORT_INVENTORY.md  ARCHITECTURE_INVENTORY_UPDATE.md  ASSIGNMENT_ARCHITECTURE.md  ASSIGNMENT_STATUS_UPDATE.md  CORE_SEPARATION.md  CORE_SEPARATION_FINAL.md  CORRECTIONS_INVENTORY_APP.md  COUNTING_RULES.md  FINAL_IMPORT_FIXES_COMPLETE.md  FINAL_IMPORT_FIXES_SUMMARY.md  IMPORT_FIXES_SUMMARY.md  INVENTORY_APIS.md  INVENTORY_JOBS_CREATE_API.md  INVENTORY_WAREHOUSE_STATS_API.md  JOB_ADD_EMPLACEMENTS_API.md  JOB_ASSIGNMENT_API.md  JOB_CREATION_MULTIPLE_COUNTINGS.md  JOB_FULL_DETAIL_API.md  JOB_PROGRESS_API.md  JOB_READY_API.md  JOB_REMOVE_EMPLACEMENTS_API.md  MASTERDATA_APIS.md  MIGRATION_TO_MOBILE_APP.md  MOBILE_APIS.md  MOBILE_API_IMPLEMENTATION.md  MOBILE_API_NSERIE_UPDATE.md  MOBILE_SYNC_BEST_PRACTICES.md  NSERIE_ADMIN_DOCUMENTATION.md  NSERIE_MODEL.md  PENDING_JOBS_API.md  RESOURCE_ASSIGNMENT_API.md  STOCK_IMPORT_VALIDATION.md  TEST_MOBILE_APIS.md  UNASSIGNED_LOCATIONS_API.md  USERS_APIS.md  datatable_documentation.md  datatable_quick_guide.md
env/: pyvenv.cfg
examples/: assignment_status_example.py  job_progress_example.py  job_ready_example.py  job_ready_image_stock_example.py  stock_import_validation_example.py  warehouse_stats_example.py
nginx/: Dockerfile  nginx-ssl.conf  nginx.conf  ssl.conf
project/: api_info.py  asgi.py  middleware.py  settings.py  urls.py
scripts/: close_mobile_assignment.py  post_mobile_counting_detail.py
serveur/: DIAGNOSTIC_500_ERROR.sh  DIAGNOSTIC_DATABASE.sh  DIAGNOSTIC_STATIC_404.sh  FIX_LOGGING_PERMISSIONS.sh  FIX_PERMISSIONS.sh  FIX_STATIC_FILES.sh  INSTALL.sh  SETUP_GUNICORN_VENV.sh  UPDATE_NGINX_CONFIG.sh  gunicorn.service  gunicorn.service.venv  install_venv.sh  nginx-inventaire
(+517 files in other folders)
