[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-datatables-server"
version = "1.0.0"
description = "Django REST Framework package for server-side DataTable processing with SOLID architecture"
readme = "README_PYPI.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "InventaireModuleWMS Team"}
]
keywords = ["django", "rest-framework", "datatable", "pagination", "filtering", "sorting", "export", "solid", "kiss", "dry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=4.0,<6.0",
    "djangorestframework>=3.12.0",
    "django-filter>=2.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/InventaireModuleWMS/django-datatables-server"
Documentation = "https://github.com/InventaireModuleWMS/django-datatables-server/blob/main/README.md"
Repository = "https://github.com/InventaireModuleWMS/django-datatables-server"
"Bug Tracker" = "https://github.com/InventaireModuleWMS/django-datatables-server/issues"

[tool.setuptools]
packages = ["django_datatables_server"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

